--- a/Main/OceanSide Template v1.0.1/media.html
+++ b/Main/OceanSide Template v1.0.1/media.html
@@ -18,7 +18,7 @@
 <link href="css/plugins/font-awesome.min.css" rel="stylesheet">
 <link href="css/plugins/magnific-popup.css" rel="stylesheet">
 
-
+<link href="css/main.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -112,7 +112,7 @@ Curated selection of best songs from duotone. Listen and enjoy these album songs
 </section>
 
 
-<section class="section-padding light">
+<section class="section-padding light" style="padding-top: 20px; background:url('lib/img/hero-bg1.jpg');">
 <div class="container">
 <div class="row">
 <div class="btn-position">
@@ -125,63 +125,50 @@ Curated selection of best songs from duotone. Listen and enjoy these album songs
 </div>
 
 <div class="tab-content">
+  <div class="s003">
+    <form>
+      <div class="inner-form">
+        <div class="input-field first-wrap">
+          <div class="input-select">
+            <select data-trigger="" name="choices-single-defaul">
+              <option placeholder="">Category</option>
+              <option>New Arrivals</option>
+              <option>Sale</option>
+              <option>Ladies</option>
+              <option>Men</option>
+              <option>Clothing</option>
+              <option>Footwear</option>
+              <option>Accessories</option>
+            </select>
+          </div>
+        </div>
+        <div class="input-field second-wrap">
+          <input id="search" type="text" placeholder="Enter Keywords?" />
+        </div>
+        <div class="input-field third-wrap">
+          <button class="btn-search" type="button">
+            <svg class="svg-inline--fa fa-search fa-w-16" aria-hidden="true" data-prefix="fas" data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+              <path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
+            </svg>
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+  
 
 <div role="tabpanel" class="tab-pane audio-tab active" id="audio">
-<div class="audio-wrap">
-<div class="col-xs-12 col-sm-1 col-md-1">
-<div class="audio-play-btn" data-playlist-id="3">
-<a href="javascript:;">
-<span class="flaticon-play flaticon-sm"></span>
-</a>
-</div>
-</div>
-<div class="col-xs-12 col-sm-8 col-md-9">
-<div class="audio-title">
-<span>Finance In Health Industry || Dr. Archan Shumsher Rana</span>
-<p>Health</p>
-</div>
-</div>
-<div class="col-xs-12 col-sm-3 col-md-2">
-
-</div>
- </div>
-<div class="clearfix"></div>
-<div class="audio-wrap">
-<div class="col-xs-12 col-sm-1 col-md-1">
-<div class="audio-play-btn" data-playlist-id="7">
-<a href="javscript:;">
-<span class="flaticon-play flaticon-sm"></span>
-</a>
-</div>
-</div>
-<div class="col-xs-12 col-sm-8 col-md-9">
-<div class="audio-title">
-<span>3.5 million Seed Funding || Bikram Dahal </span>
-<p>Business Strategy</p>
-</div>
-</div>
-<div class="col-xs-12 col-sm-3 col-md-2">
-
-</div>
-</div>
-<div class="clearfix"></div>
-<div class="audio-wrap">
-<div class="col-xs-12 col-sm-1 col-md-1">
-<div class="audio-play-btn" data-playlist-id="10">
-<a href="javascript:;"><span class="flaticon-lpay flaticon-sm"></span></a>
-</div>
-</div>
-<div class="col-xs-12 col-sm-8 col-md-9">
-<div class="audio-title">
-<span>PANEL DISCUSSION ON AI BY TECH AND TRENDY</span>
-<p> AI</p>
-</div>
-</div>
-<div class="col-xs-12 col-sm-3 col-md-2">
-
-</div>
-</div>
-
+  <iframe title="Finance In Health Industry || Dr. Archan Shumsher Rana || EP 119 || MBBS, MD- Nephrology ||" allowtransparency="true" height="150" width="100%" style="border: none; min-width: min(100%, 430px);" scrolling="no" data-name="pb-iframe-player" src="https://www.podbean.com/player-v2/?i=q8abw-12c75c9-pb&from=pb6admin&share=0&download=0&rtl=1&fonts=Comic%20Sans%20MS&skin=1b1b1b&font-color=auto&logo_link=none&btn-skin=8bbb4e"></iframe>
+  <div style="margin-top: 25px;"></div>
+  <iframe title="3.5 million Seed Funding || Bikram Dahal || EP 118 || Co- founder/CTO - Bikram Dahal || Anup Ghimire" allowtransparency="true" height="150" width="100%" style="border: none; min-width: min(100%, 430px);" scrolling="no" data-name="pb-iframe-player" src="https://www.podbean.com/player-v2/?i=ummmu-12bbe5b-pb&from=pb6admin&share=0&download=0&rtl=1&fonts=Comic%20Sans%20MS&skin=1b1b1b&font-color=auto&logo_link=none&btn-skin=8bbb4e"></iframe>
+  <div style="margin-top: 25px;"></div>
+  <iframe title="IN CONVERSATION WITH PRASANNA DHUNGEL || Series 3 EP 4 || GROWBYDATA || ANUP GHIMIRE" allowtransparency="true" height="150" width="100%" style="border: none; min-width: min(100%, 430px);" scrolling="no" data-name="pb-iframe-player" src="https://www.podbean.com/player-v2/?i=qx8db-12a65ac-pb&from=pb6admin&share=0&download=0&rtl=1&fonts=Comic%20Sans%20MS&skin=1b1b1b&font-color=auto&logo_link=none&btn-skin=8bbb4e"></iframe>
+  <div style="margin-top: 25px;"></div>
+  <iframe title="IN CONVERSATION WITH PRASANNA DHUNGEL || Series 3 EP 3 || GROWBYDATA || ANUP GHIMIRE" allowtransparency="true" height="150" width="100%" style="border: none; min-width: min(100%, 430px);" scrolling="no" data-name="pb-iframe-player" src="https://www.podbean.com/player-v2/?i=pbdq5-129d1da-pb&from=pb6admin&share=0&download=0&rtl=1&fonts=Comic%20Sans%20MS&skin=1b1b1b&font-color=auto&logo_link=none&btn-skin=8bbb4e"></iframe>
+  <div style="margin-top: 25px;"></div>
+  <iframe title="IN CONVERSATION WITH PRASANNA DHUNGEL || Series 3 EP 2 || GROWBYDATA || ANUP GHIMIRE" allowtransparency="true" height="150" width="100%" style="border: none; min-width: min(100%, 430px);" scrolling="no" data-name="pb-iframe-player" src="https://www.podbean.com/player-v2/?i=vjyba-129d1d4-pb&from=pb6admin&share=0&download=0&rtl=1&fonts=Comic%20Sans%20MS&skin=1b1b1b&font-color=auto&logo_link=none&btn-skin=8bbb4e"></iframe>
+  <div style="margin-top: 25px;"></div>
+  <iframe title="IN CONVERSATION WITH PRASANNA DHUNGEL || Series 3 EP 1 || GROWBYDATA || ANUP GHIMIRE" allowtransparency="true" height="150" width="100%" style="border: none; min-width: min(100%, 430px);" scrolling="no" data-name="pb-iframe-player" src="https://www.podbean.com/player-v2/?i=uuzkz-128d5b4-pb&from=pb6admin&share=0&download=0&rtl=1&fonts=Comic%20Sans%20MS&skin=1b1b1b&font-color=auto&logo_link=none&btn-skin=8bbb4e"></iframe>
 </div>
 
 
@@ -192,7 +179,45 @@ Curated selection of best songs from duotone. Listen and enjoy these album songs
 <div class="video-img-block">
 <a href="https://www.youtube.com/watch?v=GuAtcpFQpMw" class="mfp-youtube">
 <img src="images/video01.jpg" class="img-responsive" alt="video01">
-<div class="video-play-btn">
+<div class="video-play-btn"><div class="s003">
+      <form>
+        <div class="inner-form">
+          <div class="input-field first-wrap">
+            <div class="input-select">
+              <select data-trigger="" name="choices-single-defaul">
+                <option placeholder="">Category</option>
+                <option>New Arrivals</option>
+                <option>Sale</option>
+                <option>Ladies</option>
+                <option>Men</option>
+                <option>Clothing</option>
+                <option>Footwear</option>
+                <option>Accessories</option>
+              </select>
+            </div>
+          </div>
+          <div class="input-field second-wrap">
+            <input id="search" type="text" placeholder="Enter Keywords?" />
+          </div>
+          <div class="input-field third-wrap">
+            <button class="btn-search" type="button">
+              <svg class="svg-inline--fa fa-search fa-w-16" aria-hidden="true" data-prefix="fas" data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+    <script src="js/extention/choices.js"></script>
+    <script>
+      const choices = new Choices('[data-trigger]',
+      {
+        searchEnabled: false,
+        itemSelectText: '',
+      });
+
+    </script>
 <span class="flaticon-play flaticon-sm"></span></div>
 </a>
 </div>
@@ -322,7 +347,7 @@ Curated selection of best songs from duotone. Listen and enjoy these album songs
 </div>
 </footer>
 
--->
+
 <div class="audio-player">
 <a href="javascript:;" class="hide_player"><i class="fa fa-angle-down"></i> HIDE</a>
 <div id="jquery_jplayer_1" class="jp-jplayer"></div>
@@ -410,6 +435,7 @@ Curated selection of best songs from duotone. Listen and enjoy these album songs
 </div>
 
 </div>
+-->
 
 
 <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/lib/jquery-1.12.0.min.js"></script>
@@ -429,6 +455,15 @@ Curated selection of best songs from duotone. Listen and enjoy these album songs
 <script src="js/blur.js"></script>
 <script src="js/main.js"></script>
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"74b7f4f90c4b988a","version":"2022.8.1","r":1,"token":"1a2187940c214caa9d3fed19b4904902","si":100}' crossorigin="anonymous"></script>
+<script src="js/choices.js"></script>
+<script>
+  const choice = new Choices('[data-trigger]',
+  {
+    searchEnabled: false,
+    itemSelectText: '',
+  });
+
+</script>
 </body>
 
 <!-- Mirrored from demo.web3canvas.com/themeforest/duotone/media.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 16 Sep 2022 07:41:03 GMT -->
